[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Valera <v.medovkin1664@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.7.3"}
pydantic-settings = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
